# you_bet

./: .env.example  .gitignore  pyproject.toml  run_update.bat  setup_scheduler.ps1  update_results_manual.py
.github/workflows/: deploy.yml  update-odds.yml
src/: __init__.py  config.py  database.py  espn_results.py  export_json.py  export_training_data.py  main.py  models.py  odds_api.py  oddschecker.py  results.py
website/: astro.config.mjs  package-lock.json  package.json
website/public/data/: odds_summary.csv  training_data.csv
website/src/data/: odds.json
website/src/layouts/: Layout.astro
website/src/pages/: index.astro  results.astro  training-data.astro
