[project]
name = "you-bet"
version = "0.1.0"
description = "Football betting odds and results scraper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.1.8",
    "lxml>=5.4.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=0.21.1",
    "requests>=2.31.0",
    "rich>=13.8.1",
    "selenium>=4.11.2",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
you-bet = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
